#497: adapt MHD (classes and validator) to MHD 4.2.3 specification with minor backward incompatibilities
Update to Camel 4.18.0, CXF 4.1.5, HAPI 8.8.0, Spring 3.5.10, ipf-gazelle 3.4.0 plus some minor refactorings